@@ -1,5 +1,7 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
+export(decomp_recomp)
+export(pegasos)
 export(rpca)
 export(rsvd)
 import(pbdDMAT)
