@@ -1,2 +1,3 @@
 Release 0.1-0
-  * Add random svd.
+  * Added "decomp/recomp" function.
+  * Added random random svd and random pca.
